# zerotoprod

./: .env  .gitignore  Cargo.toml  Dockerfile  configuration.yaml.template  docker-compose.yml
.github/workflows/: pullrequests.yml  rust_ci.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
