[package]
name = "zerotoprod"
version = "0.1.0"
edition = "2021"
authors = ["Chloe Pratas <chloevision97@gmail.com>"]
description = "A tool to help you get your project to production faster."
license = "MIT"
repository = "https://github.com/Chloe199719/zerotoprod"

[lib]
path = "src/lib.rs"


[[bin]]
path = "src/main.rs"
name = "zerotoprod"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
config = "0.13"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["serde","clock"] }
env_logger = "0.9"
log = "0.4"
tracing = { version ="0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter","registry"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"

[dependencies.sqlx]
version ="0.6"
default-features = false
features = ["postgres", "runtime-tokio-rustls", "macros", "chrono","uuid", "migrate"]